14866 SMB oplock not recalled when there is a request from NFS Reviewed by: Prashanth Badari <prbadari@tintri.com> Reviewed by: Suresh Jayaraman <sjayaraman@tintri.com> Reviewed by: Jerry Jelinek <gjelinek@gmail.com> Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Matt Barden <mbarden@tintri.com> Approved by: Dan McDonald <danmcd@mnx.io>